--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@ layout:	analytics
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Rafi Long</title>
 </head>
 
 <body>
