Revert home page to default

--- a/_layouts/analytics.html
+++ b/_layouts/analytics.html
@@ -11,5 +11,11 @@
       gtag('config', 'UA-88479100-2');
     </script>
   </head>
-  {{ content }}
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+      <title>Rafi Long</title>
+  </head>
+    {{ content }}
 </html>
