--- a/_layouts/terrain.html
+++ b/_layouts/terrain.html
@@ -91,7 +91,7 @@ layout:	analytics
 <script src="/assets/js/webgl-utils.js"></script>
 <script src="/assets/js/Terrain.js"></script>
 <script src="/assets/js/background.js"></script>
-<body onload="startup();">
+<body style="margin: 0px" onload="startup();">
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
   {{ content }}
 </body>
